force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__AreResearchStudiesConducted__c.field-meta.xml
<CustomField>
    <fullName>ssot__AreResearchStudiesConducted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Research Studies Conducted</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AreResearchStudiesConducted</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>