force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__AverageActualPtcpEnrlDrtnNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AverageActualPtcpEnrlDrtnNumber__c</fullName>
    <label>Avg Actual Participant Enrollment Drtn</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AverageActualPtcpEnrlDrtnNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>