force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__AverageClinicalTrialAgreementDrtnNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AverageClinicalTrialAgreementDrtnNumber__c</fullName>
    <label>Avg Clinical Trial Agree Turnaround Drtn</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AverageClinicalTrialAgreementDrtnNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>