force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__AverageOpdPatientCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__AverageOpdPatientCount__c</fullName>
    <label>Average OPD Patient Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AverageOpdPatientCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>