force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__AvgActualParticipantEnrollmentRate__c.field-meta.xml
<CustomField>
    <fullName>ssot__AvgActualParticipantEnrollmentRate__c</fullName>
    <label>Avg Actual Participant Enrollment Rate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AvgActualParticipantEnrollmentRate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>