force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__AvgInvtglProductReleaseDrtnNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AvgInvtglProductReleaseDrtnNumber__c</fullName>
    <label>Avg Investigational Prodt Release Drtn</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AvgInvtglProductReleaseDrtnNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>