force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__AvgRegltyDocTrnarndDrtnNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AvgRegltyDocTrnarndDrtnNumber__c</fullName>
    <label>Avg Regulatory Document Turnaround Drtn</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AvgRegltyDocTrnarndDrtnNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>