force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__AvgRsrchEthicalReviewDrtnNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AvgRsrchEthicalReviewDrtnNumber__c</fullName>
    <label>Avg Research Ethical Rvw Approval Drtn</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AvgRsrchEthicalReviewDrtnNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>