force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__AvgSiteActvToLastPtcpDrtnNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__AvgSiteActvToLastPtcpDrtnNumber__c</fullName>
    <label>Avg Site Activation To Last Ptcp Drtn</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AvgSiteActvToLastPtcpDrtnNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>