force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__ClinicalTrialAgreementType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClinicalTrialAgreementType__c</fullName>
    <label>Clinical Trial Agreement Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClinicalTrialAgreementType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>