force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__DataSourceName__c.field-meta.xml
<CustomField>
    <fullName>ssot__DataSourceName__c</fullName>
    <label>Data Source Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DataSourceName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>