force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__InvestigationalProdtDisposalCpbl__c.field-meta.xml
<CustomField>
    <fullName>ssot__InvestigationalProdtDisposalCpbl__c</fullName>
    <label>Investigational Prodt Disposal Cpbl</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InvestigationalProdtDisposalCpbl</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>