force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__InvestigationalProdtStorageCapability__c.field-meta.xml
<CustomField>
    <fullName>ssot__InvestigationalProdtStorageCapability__c</fullName>
    <label>Investigational Prodt Storage Capability</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InvestigationalProdtStorageCapability</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>