force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__IsAfflWithSiteMgmtOrg__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsAfflWithSiteMgmtOrg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affiliated with Site Management Org</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsAfflWithSiteMgmtOrg</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>