force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__IsDedicatedResearchStudyRoomAvailable__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsDedicatedResearchStudyRoomAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated Research Study Room Available</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsDedicatedResearchStudyRoomAvailable</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>