force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__IsDedicatedRsrchStdyMonitorRoomAvailable__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsDedicatedRsrchStdyMonitorRoomAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dedicated Rsrch Stdy Monitoring Room Avl</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsDedicatedRsrchStdyMonitorRoomAvailable</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>