force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__IsGoodClnclPracTrnPrvd__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsGoodClnclPracTrnPrvd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Good Clinical Practice Training Provided</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsGoodClnclPracTrnPrvd</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>