force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__IsPharmacogenomicSpecimenCollectionAvl__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPharmacogenomicSpecimenCollectionAvl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pharmacogenomic Specimen Collection Avl</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPharmacogenomicSpecimenCollectionAvl</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>