force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__IsPkpdSpecimenCollectionStorageAvailable__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPkpdSpecimenCollectionStorageAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PKPD Specimen Collection and Storage Avl</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPkpdSpecimenCollectionStorageAvailable</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>