force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__IsRearsrchStudyMaterialStoreAvailable__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsRearsrchStudyMaterialStoreAvailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Research Study Material Store Available</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsRearsrchStudyMaterialStoreAvailable</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>