force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__IsReasearchEthicalReviewSbmsSupp__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsReasearchEthicalReviewSbmsSupp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Research Ethical Review Sbms Supported</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsReasearchEthicalReviewSbmsSupp</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>