force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__IsSatelliteSite__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsSatelliteSite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Satellite Site</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsSatelliteSite</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>