force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__PatientAgeRange__c.field-meta.xml
<CustomField>
    <fullName>ssot__PatientAgeRange__c</fullName>
    <label>Patient Age Range</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PatientAgeRange</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>