force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__rel_1723127407328_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723127407328_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthcareFacility_AccountId_map_Acc_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>HealthcareFacility_AccountId_map_Acc_rel</relationshipLabel>
    <relationshipName>rel_1723127407328_end</relationshipName>
    <type>Lookup</type>
</CustomField>