force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__rel_1723127423762_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723127423762_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthcareFacility_HealthcareFacilit_rel</label>
    <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
    <relationshipLabel>HealthcareFacility_HealthcareFacilit_rel</relationshipLabel>
    <relationshipName>rel_1723127423762_end</relationshipName>
    <type>Lookup</type>
</CustomField>