force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__rel_1723127457836_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723127457836_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HealthcareFacility_LocationId_map_Lo_rel</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>HealthcareFacility_LocationId_map_Lo_rel</relationshipLabel>
    <relationshipName>rel_1723127457836_end</relationshipName>
    <type>Lookup</type>
</CustomField>