force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__ResearchEthicalReviewCommitteeType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResearchEthicalReviewCommitteeType__c</fullName>
    <label>Research Ethical Review Committee Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResearchEthicalReviewCommitteeType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>