force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__ResearchStudyMethod__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResearchStudyMethod__c</fullName>
    <label>Research Study Method</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResearchStudyMethod</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>