force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__ResearchStudyStartYear__c.field-meta.xml
<CustomField>
    <fullName>ssot__ResearchStudyStartYear__c</fullName>
    <label>Research Study Start Year</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ResearchStudyStartYear</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>