force-app/main/default/objects/ssot__HealthcareFacility__dlm/fields/ssot__SupportedResearchStudyType__c.field-meta.xml
<CustomField>
    <fullName>ssot__SupportedResearchStudyType__c</fullName>
    <label>Supported Research Study Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SupportedResearchStudyType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>